--- a/src/components/Shop.css
+++ b/src/components/Shop.css
@@ -1,3 +1,6 @@
+.search-container{
+    background-color: rgba(153, 109, 109, 0.549);
+}
 .shop-container{
     display: grid;
     grid-template-columns: 3fr 1fr;
